add boilerplate code, meta tags for search engine and favicons to be displayed next to the title

--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--meta tage for search engines-->
+    <meta name="keywords" content="Exercise, Running, Dublin Ireland">
+    <meta name="author" content="Sayed Anosh">
+    <meta name="description" content="Love Running, website for runners in Dublin Ireland">
+    <!--fav icons-->
+    <link rel="icon" type="image/icon" href="apple-touch-icon.png">
+    <link rel="icon" type="image/icon" sizes="192x192" href="android-chrome-192x192.png">
+    <link rel="icon" type="image/icon" sizes="512x512" href="android-chrome-512x512.png">
+    <link rel="icon" type="image/icon" sizes="16x16" href="favicon-16x16.png">
+    <link rel="icon" type="image/icon" sizes="32x32" href="favicon-32x32.png">
+
     <title>Document</title>
 </head>
 <body>
