add semnactic elements with starter styles

--- a/index.html
+++ b/index.html
@@ -8,15 +8,28 @@
     <meta name="author" content="Sayed Anosh">
     <meta name="description" content="Love Running, website for runners in Dublin Ireland">
     <!--fav icons-->
-    <link rel="icon" type="image/icon" href="apple-touch-icon.png">
-    <link rel="icon" type="image/icon" sizes="192x192" href="android-chrome-192x192.png">
-    <link rel="icon" type="image/icon" sizes="512x512" href="android-chrome-512x512.png">
-    <link rel="icon" type="image/icon" sizes="16x16" href="favicon-16x16.png">
-    <link rel="icon" type="image/icon" sizes="32x32" href="favicon-32x32.png">
-
-    <title>Document</title>
+    <link rel="icon" type="image/icon" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/icon" sizes="16x16" href="assets/icons/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/icon" sizes="32x32" href="assets/icons/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/icon" sizes="192x192" href="assets/icons/favicon/android-chrome-192x192.png">
+    <link rel="icon" type="image/icon" sizes="512x512" href="assets/icons/favicon/android-chrome-512x512.png">
+    <!--page title-->
+    <title>Love Exercise</title>
+    <!--stylesheet link-->
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-    
+    <!--header-->
+    <header>
+      header
+    </header>
+    <!--main content-->
+    <main>
+      main
+    </main>
+    <!--footer-->
+    <footer>
+      footer
+    </footer>
 </body>
 </html>
