--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 <body>
     <!--header-->
     <header>
-      header
+      <a href="index.html">
+        <h1 id="logo">Love Exercise</h1>
+      </a>
     </header>
     <!--main content-->
     <main>
