--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
       <a href="index.html">
         <h1 id="logo">Love Exercise</h1>
       </a>
+      <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="signup.html">Sign Up</a></li>
+        </ul>
+
+       
+      </nav>
     </header>
     <!--main content-->
     <main>
