add margin bottom a tags in ul and border bottom to home to indicate home page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <!--header-->
     <header>
-      <a href="index.html">
+      <a href="index.html" class="active">
         <h1 id="logo">Love Exercise</h1>
       </a>
       <nav>
