add nav toggle checkbox that display navigation when ticked and position is next to the logo

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
       <a href="index.html" class="active">
         <h1 id="logo">Love Exercise</h1>
       </a>
+      <input type="checkbox" id="nav-toggle">
+      <label for="nav-toggle" class="nav-toggle-label">X</label>
       <nav>
         <ul id="menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="signup.html">Sign Up</a></li>
         </ul>
-
-       
       </nav>
     </header>
     <!--main content-->
