add social media links to footer and display them horizontally

--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@
     </main>
     <!--footer-->
     <footer>
-      footer
+      <ul>
+        <li><a href="https://www.facebook.com" target="_blank" aria-label="Go to facebook"><i class="fa-brands fa-facebook"></i></a> </li>
+        <li><a href="https://www.instagram.com" target="_blank" aria-label="Go to instagram"><i class="fa-brands fa-instagram"></i></a></li>
+        <li><a href="https://www.twitter.com" target="_blank" aria-label="Go to twitter page"><i class="fa-brands fa-twitter"></i></a>
+        <li><a href="https://www.youtube.com" target="_blank" aria-label="Go to youtube"><i class="fa-brands fa-youtube"></i></a></li>
+        </ul>
     </footer>
+    <script src="https://kit.fontawesome.com/5b20363615.js" crossorigin="anonymous"></script>
 </body>
 </html>
