--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <h1 id="logo">Love Exercise</h1>
       </a>
       <input type="checkbox" id="nav-toggle">
-      <label for="nav-toggle" class="nav-toggle-label">X</label>
+      <label for="nav-toggle" class="nav-toggle-label">
+        <i class="fa-solid fa-bars"></i>
+      </label>
       <nav>
         <ul id="menu">
             <li><a href="index.html">Home</a></li>
@@ -41,11 +43,27 @@
     <!--footer-->
     <footer>
       <ul>
-        <li><a href="https://www.facebook.com" target="_blank" aria-label="Go to facebook"><i class="fa-brands fa-facebook"></i></a> </li>
-        <li><a href="https://www.instagram.com" target="_blank" aria-label="Go to instagram"><i class="fa-brands fa-instagram"></i></a></li>
-        <li><a href="https://www.twitter.com" target="_blank" aria-label="Go to twitter page"><i class="fa-brands fa-twitter"></i></a>
-        <li><a href="https://www.youtube.com" target="_blank" aria-label="Go to youtube"><i class="fa-brands fa-youtube"></i></a></li>
-        </ul>
+        <li>
+            <a href="https://www.facebook.com" target="_blank" aria-label="Go to facebook" rel="noopener">
+              <i class="fa-brands fa-facebook"></i>
+           </a> 
+       </li>
+        <li>
+            <a href="https://www.instagram.com" target="_blank" aria-label="Go to instagram" rel="noopener">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+        </li>
+        <li>
+            <a href="https://www.twitter.com" target="_blank" aria-label="Go to twitter page" rel="noopener">
+                <i class="fa-brands fa-twitter"></i>
+            </a>
+        </li>
+        <li>
+            <a href="https://www.youtube.com" target="_blank" aria-label="Go to youtube" rel="noopener">
+                <i class="fa-brands fa-youtube"></i>
+            </a>
+        </li>
+     </ul>
     </footer>
     <script src="https://kit.fontawesome.com/5b20363615.js" crossorigin="anonymous"></script>
 </body>
