--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -30,7 +30,7 @@
       </label>
       <nav>
         <ul id="menu">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="pages/gallery.html">Gallery</a></li>
             <li><a href="pages/signup.html">Sign Up</a></li>
         </ul>
