--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </label>
       <nav>
         <ul id="menu">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
             <li><a href="pages/gallery.html">Gallery</a></li>
             <li><a href="pages/signup.html">Sign Up</a></li>
         </ul>
@@ -38,7 +38,9 @@
     </header>
     <!--main content-->
     <main>
-      main
+        <section id="hero">
+
+        </section>
     </main>
     <!--footer-->
     <footer>
