--- a/pages/signup.html
+++ b/pages/signup.html
@@ -16,7 +16,7 @@
     <!--page title-->
     <title>Love Exercise</title>
     <!--stylesheet link-->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
 </head>
 <body>
     <!--header-->
@@ -31,14 +31,14 @@
       <nav>
         <ul id="menu">
             <li><a href="../index.html">Home</a></li>
-            <li><a href="pages/gallery.html">Gallery</a></li>
-            <li><a href="pages/signup.html">Sign Up</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="signup.html" class="active">Sign Up</a></li>
         </ul>
       </nav>
     </header>
     <!--main content-->
     <main>
-      main
+      
     </main>
     <!--footer-->
     <footer>
