add cover text with styles for default and both media queries

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
     <!--main content-->
     <main>
         <section id="hero">
+            <div id="cover-text">
+                <h2>Welcome excerise lovers!</h2>
+                <h3>Specifically built for runners</h3>
+            </div>
 
         </section>
     </main>
