add another section with 5 divs for text

--- a/index.html
+++ b/index.html
@@ -43,7 +43,24 @@
                 <h2>Welcome excerise lovers!</h2>
                 <h3>Specifically built for runners</h3>
             </div>
+        </section>
+        <section id="why-join-us">
+            <div class="part-one join">
+                <h2>Why love running with us</h2>
+            </div>
+            <div id="part-two join">
+              
 
+            </div>
+            <div id="part-three join">
+
+            </div> 
+            <div id="part-four join">
+
+            </div>
+            <div id="part-five join">
+
+            </div> 
         </section>
     </main>
     <!--footer-->
