style header in main section two and add text to the second div

--- a/index.html
+++ b/index.html
@@ -46,20 +46,24 @@
         </section>
         <section id="why-join-us">
             <div class="part-one join">
+                <h2>Why love running with us?</h2>
+            </div>
+            <div class="part-two join">
+                <h3>Eat Healthy</h3>
+                <hr>
+                <p>Since it improves aerobic fitness, running is a great way
+                    to helo improve your cardivascular health. Plus it burns
+                    calories and can build strength.
+                </p>
+            </div>
+            <div class="part-three join">
                 <h2>Why love running with us</h2>
-            </div>
-            <div id="part-two join">
-              
-
-            </div>
-            <div id="part-three join">
-
             </div> 
-            <div id="part-four join">
-
-            </div>
-            <div id="part-five join">
-
+            <div class="part-four join">
+                <h2>Why love running with us</h2>
+             </div>
+            <div class="part-five join">
+                <h2>Why love running with us</h2>
             </div> 
         </section>
     </main>
