add text to all divs inside section why-join-us and add styles

--- a/index.html
+++ b/index.html
@@ -44,26 +44,36 @@
                 <h3>Specifically built for runners</h3>
             </div>
         </section>
+
         <section id="why-join-us">
-            <div class="part-one join">
+            <div class="join">
                 <h2>Why love running with us?</h2>
             </div>
-            <div class="part-two join">
-                <h3>Eat Healthy</h3>
-                <hr>
-                <p>Since it improves aerobic fitness, running is a great way
-                    to helo improve your cardivascular health. Plus it burns
-                    calories and can build strength.
+            <div class="join">
+                <h3>Eat Healthy  <i class="fa-solid fa-heart-pulse"></i></h3>
+                <p>Since it improves aerobic <br> fitness, running is a great way <br>
+                    to helo improve your<br> cardivascular health. Plus it<br>burns
+                    calories and can build<br> strength.
                 </p>
             </div>
-            <div class="part-three join">
-                <h2>Why love running with us</h2>
+            <div class="join">
+                <h3>Feel Strong <i class="fa-solid fa-dumbbell"></i></h3>
+                <p>Running strengthens your<br> heart by pumping blood more <br>
+                   effectively through your body
+                </p>
             </div> 
-            <div class="part-four join">
-                <h2>Why love running with us</h2>
+            <div class="join">
+                <h3>Feel free <i class="fa-brands fa-fly"></i></h3>
+                <p>Physcial exercise running <br> included, is known to release <br>
+                    endorphins in the brain. <br> Endorphins make you more <br>
+                    energetic more awake and <br> yes, happier.
+                 </p>
              </div>
-            <div class="part-five join">
-                <h2>Why love running with us</h2>
+            <div class="join">
+                <h3>Get Social<i class="fa-solid fa-globe"></i></h3>
+                <p>When we run with others we <br> can run further and faster
+                   <br> more easily. Social running can <br> pull you out of running funk <br>
+                    or low mood, and inspire you to <br> try new events</p>
             </div> 
         </section>
     </main>
