add circular image at the bottom adjusted for larger screens too

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                    <br> more easily. Social running can <br> pull you out of running funk <br>
                     or low mood, and inspire you to <br> try new events</p>
             </div> 
+            <div id="section-image">
+                <div id="join-image"></div>
+            </div>
         </section>
     </main>
     <!--footer-->
