--- a/index.html
+++ b/index.html
@@ -49,32 +49,36 @@
             <div class="join">
                 <h2>Why love running with us?</h2>
             </div>
-            <div class="join">
-                <h3>Eat Healthy  <i class="fa-solid fa-heart-pulse"></i></h3>
+            <div class="join join-first">
+                <h3 >Eat Healthy  <i class="fa-solid fa-heart-pulse"></i></h3>
+                <hr>
                 <p>Since it improves aerobic <br> fitness, running is a great way <br>
                     to helo improve your<br> cardivascular health. Plus it<br>burns
                     calories and can build<br> strength.
                 </p>
             </div>
-            <div class="join">
+            <div class="join join-first">
                 <h3>Feel Strong <i class="fa-solid fa-dumbbell"></i></h3>
+                <hr>
                 <p>Running strengthens your<br> heart by pumping blood more <br>
                    effectively through your body
                 </p>
             </div> 
-            <div class="join">
+            <div class="join join-second">
                 <h3>Feel free <i class="fa-brands fa-fly"></i></h3>
+                <hr>
                 <p>Physcial exercise running <br> included, is known to release <br>
                     endorphins in the brain. <br> Endorphins make you more <br>
                     energetic more awake and <br> yes, happier.
                  </p>
              </div>
-            <div class="join">
+            <div class="join join-second">
                 <h3>Get Social<i class="fa-solid fa-globe"></i></h3>
+                <hr>
                 <p>When we run with others we <br> can run further and faster
                    <br> more easily. Social running can <br> pull you out of running funk <br>
                     or low mood, and inspire you to <br> try new events</p>
-            </div> 
+            </div>
             <div id="section-image">
                 <div id="join-image"></div>
             </div>
