style content layout for different breakpoints, starting with mobile first, then 786px and 992px

--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
         </section>
 
         <section id="why-join-us">
-            <div class="join">
+            <div class="join h2-div">
                 <h2>Why love running with us?</h2>
             </div>
+        <div id="why-join">
+        <div id="part-one">
             <div class="join join-first">
                 <h3 >Eat Healthy  <i class="fa-solid fa-heart-pulse"></i></h3>
                 <hr>
@@ -64,6 +66,8 @@
                    effectively through your body
                 </p>
             </div> 
+        </div>
+        <div id="part-two">
             <div class="join join-second">
                 <h3>Feel free <i class="fa-brands fa-fly"></i></h3>
                 <hr>
@@ -79,9 +83,11 @@
                    <br> more easily. Social running can <br> pull you out of running funk <br>
                     or low mood, and inspire you to <br> try new events</p>
             </div>
+        </div>
             <div id="section-image">
                 <div id="join-image"></div>
             </div>
+        </div>
         </section>
     </main>
     <!--footer-->
